# ProcIsoCity

./: CMakeLists.txt  CMakePresets.json  ProcIsoCityTests.cpp  README.md  RoundNotes.md
ProcIsoCity-main/: CMakeLists.txt  README.md
ProcIsoCity-main/src/cli/: imagediff.cpp  main.cpp  suite.cpp
ProcIsoCity-main/src/isocity/: Export.cpp  Export.hpp  Game.cpp  Game.hpp  GfxProps.cpp  Noise.hpp  Renderer.cpp  Renderer.hpp
ProcIsoCity-main/tests/: ProcIsoCityTests.cpp
ProcIsoCity_full_upload_bundle_road_autotile/src/: main.cpp
ProcIsoCity_full_upload_bundle_road_autotile/src/isocity/: Config.hpp  EditHistory.cpp  Game.cpp  Iso.hpp  Noise.hpp  SaveLoad.cpp  Sim.hpp
cmake/: Findraylib.cmake
shaders/: README.md  bloom_blur.fs.glsl  bloom_extract.fs.glsl  bloom_extract.vs.glsl  cloudmask.fs.glsl  cloudmask.vs.glsl  common.glsl  materialfx.fs.glsl  materialfx.vs.glsl  postfx.fs.glsl  taa.fs.glsl  volcloud.fs.glsl  volcloud.vs.glsl  weatherfx.fs.glsl  weatherfx.vs.glsl
src/: main.cpp
src/cli/: CliMain.hpp  CliParse.hpp  autobuild.cpp  blockdistricts.cpp  blocks.cpp  blueprint.cpp  cartography.cpp  chronicle.cpp  cli_entry.cpp  config.cpp  contours.cpp  customgfx.cpp  diff.cpp  districtreport.cpp  dossier.cpp  economy.cpp  evacuation.cpp  evolve.cpp  floodrisk.cpp  goodsgraph.cpp  heightmap.cpp  hydrology.cpp  imagediff.cpp  inspect.cpp  isochrone.cpp  livability.cpp  main.cpp  mapexport.cpp  mesh.cpp  mine.cpp  osmimport.cpp  parkopt.cpp  patch.cpp  path.cpp  policyopt.cpp  replay.cpp  roadcentrality.cpp  roadgraph.cpp  roadhealth.cpp  roadresilience.cpp  (+17 more)
src/isocity/: AirPollution.cpp  AirPollution.hpp  AppPaths.cpp  AppPaths.hpp  AutoBuild.cpp  AutoBuild.hpp  BlockDistricting.cpp  BlockDistricting.hpp  BlueNoise.hpp  Blueprint.cpp  Blueprint.hpp  Brush.hpp  CarbonModel.cpp  CarbonModel.hpp  Cartography.cpp  Cartography.hpp  Checksum.cpp  Checksum.hpp  Chronicle.cpp  Chronicle.hpp  CityBlockGraph.cpp  CityBlockGraph.hpp  CityBlocks.cpp  CityBlocks.hpp  CityMeta.cpp  CityMeta.hpp  CliManifest.cpp  CliManifest.hpp  Compression.cpp  Compression.hpp  Config.hpp  ConfigIO.cpp  ConfigIO.hpp  Console.cpp  Console.hpp  Contours.cpp  Contours.hpp  CrashHandler.cpp  CrashHandler.hpp  CrimeModel.cpp  (+280 more)
src/tools/: diff.cpp
tests/: CliParseLiteTests.cpp  ProcGenEnumLiteTests.cpp  ProcIsoCityTests.cpp  SupportBundleLiteTests.cpp  ZipWriterLiteTests.cpp
tools/: README.md  fix_msvc_issues.bat  fix_msvc_issues.py  procisocity_compare.py  procisocity_insights.py
